# GM-SkillForge

./: .env.bak  .env.example  .gitignore  Audit_Report_Final.html  Audit_Report_genesismind_ai.html  CODEX_STARTER.md  README.md  RegressionReport.json  ReleaseManifest.json  Ruling.json  UpdatedGraph.json  audit_report_boundary.json  audit_report_consistency.json  bulk_patch_imports.py  check_akshare_funcs.py  check_institution.py  create_dummy_packs.py  create_valid_dummy_packs.py  index.html  init_env.ps1  insert_debug.py  multi-ai-collaboration.md  nextjs-ai-seo-checker.html  package.json  patch_imports.py  patch_script.py  patch_test.py  pyproject.toml  requirements.txt  rewrite_registry.py  shopify-ai-seo-checker.html  simple_api.py  start_dev.ps1  svelte-ai-seo-checker.html  test-ai-improvement.md  test_regex.py  test_regex2.py  test_regex3.py  test_wave3_verification.py  vite-ai-seo-checker.html  (+1 more)
quant-system/: .env.example  CONSTITUTION_ALIGNMENT.md  DEPRECATED.md  README.md  pyproject.toml  requirements.txt
quant-system/contracts/: INTERFACE_CONTRACTS.md
quant-system/docs/: DEPLOYMENT.md
quant-system/examples/: example_stock_selector.py
quant-system/skills/: base.py
quant-system/skills/research/: kronos_predict.py  stock_selector.py
quant-system/tests/: test_data_layer.py
skillforge-spec-pack/: HANDOVER_REPORT.md  README.md  VERSIONING.md  audit_report_boundary.json  audit_report_consistency.json  error_codes.yml  pyproject.toml  run_l4_06_chain.py  run_replay_baseline.py  sample_evidence.py  test_skill_threshold.py  test_wave7_verify.py  verify_evidence.py  verify_trace_l5.py
skillforge-spec-pack/contract_tests/: test_contracts.py  test_tech_seo_audit_contract.py
skillforge-spec-pack/contract_tests/invalid_examples/: audit_pack_invalid_1.json  audit_pack_invalid_2.json  (+10 more)
skillforge-spec-pack/db/: skillforge.sqlite-journal
skillforge-spec-pack/orchestration/: controls_catalog.schema.json  controls_catalog.yml  error_codes.yml  error_policy.schema.json  error_policy.yml  issue_catalog.yml  pipeline_v0.yml  protocol_v0_scope.yml  quality_gate_levels.schema.json  quality_gate_levels.yml  schema_lint_policy.yml  skill_thresholds.yml
skillforge-spec-pack/sample_evidence/: sample_evidence.json  sample_public_key.pem  sample_public_key.txt
skillforge-spec-pack/schemas/: audit_pack.schema.json  common.schema.json  execution_pack.schema.json  gate_decision.schema.json  granularity_rules.schema.json  registry_publish.schema.json  tech_seo_audit.input.schema.json  tech_seo_audit.output.schema.json  trace_event.schema.json
skillforge-spec-pack/skillforge/: README.md  run_first_skill_mean_reversion.py
skillforge-spec-pack/tools/: validate.py
(+3340 files in other folders)
