[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gm-skillforge-cli"
version = "0.1.0"
description = "System-level SkillForge CLI entrypoint"
requires-python = ">=3.9"

[project.scripts]
skillforge = "scripts.skillforge_audit:main"

[tool.setuptools.packages.find]
include = ["scripts*"]

